fix: dont cutoff quick search modal

--- a/frontend/app/src/styles/quick-switcher.scss
+++ b/frontend/app/src/styles/quick-switcher.scss
@@ -96,7 +96,7 @@
   }
 
   [cmdk-list] {
-    height: 393px;
+    height: 66vh;
     max-height: 400px;
     overflow: auto;
     overscroll-behavior: contain;
